--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
+.container {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+#header {
+  background-image: url(./clouds_early_dawn.png);
+  height: 260px;
+  width: 100%;
+  background-size: cover;
+}
+
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 60px;
+}
+
+footer .container {
+  margin-top: 0;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  padding-top: 10px;
+  width: 100%;
+  height: 60px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: rgb(32, 31, 31);
 }
